--- a/style.css
+++ b/style.css
@@ -347,3 +347,74 @@ input[type=checkbox].w3-check:disabled+.w3-validate,input[type=radio].w3-radio:d
 .w3-border-dark-grey,.w3-hover-border-dark-grey:hover,.w3-border-dark-gray,.w3-hover-border-dark-gray:hover{border-color:#616161!important}
 .w3-border-pale-red,.w3-hover-border-pale-red:hover{border-color:#ffe7e7!important}.w3-border-pale-green,.w3-hover-border-pale-green:hover{border-color:#e7ffe7!important}
 .w3-border-pale-yellow,.w3-hover-border-pale-yellow:hover{border-color:#ffffcc!important}.w3-border-pale-blue,.w3-hover-border-pale-blue:hover{border-color:#e7ffff!important}
+
+
+
+
+
+
+@keyframes lightning {
+    0% {background-color: transparent;}
+    90% {background-color: darkblue;}
+    91% {background-color: white;}
+    92% {background-color: lightyellow;}
+    93% {background-color: yellow;}
+    94% {background-color: white;}
+    95% {background-color: transparent;}
+}
+
+
+
+
+
+
+
+/* style="background-image: linear-gradient(white, blue, red)"*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
