--- a/style.css
+++ b/style.css
@@ -354,13 +354,13 @@ input[type=checkbox].w3-check:disabled+.w3-validate,input[type=radio].w3-radio:d
 
 
 @keyframes lightning {
-    0% {background-color: transparent;}
-    90% {background-color: darkblue;}
-    91% {background-color: white;}
-    92% {background-color: lightyellow;}
-    93% {background-color: yellow;}
-    94% {background-color: white;}
-    95% {background-color: transparent;}
+    /*from {background-color: #596396;}
+    to {background-color: #DEDBE2;}
+    to {background-color: #FEFEDF;}*/
+    0% {background-color: #596396;}
+    50% {background-color: #596396;}
+    75% {background-color: #FEFEDF;}
+    80% {background-color: #DEDBE2;}
 }
 
 
